# ur3_robot

./: README.md
castlex_follow/skeleton_track/: CMakeLists.txt  package.xml
castlex_follow/skeleton_track/include/: orbbec_camera.h
castlex_follow/skeleton_track/launch/: rostopic.launch  (+1 more)
ur3_config/: CMakeLists.txt  package.xml
ur3_config/config/: control_config.yaml  motion_config.yaml  task_param.yaml  teach.yaml
ur3_control/: CMakeLists.txt  package.xml
ur3_control/src/: base_controller_node.cpp  base_controller_server.cpp  test_controller.cpp
ur3_ikfast/: CMakeLists.txt  package.xml
ur3_ikfast/ur3_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
ur3_ikfast_ur3_arm_plugin/: CMakeLists.txt  package.xml  update_ikfast_plugin.sh  ur3_ur3_arm_moveit_ikfast_plugin_description.xml
ur3_ikfast_ur3_arm_plugin/src/: ur3_ur3_arm_ikfast_moveit_plugin.cpp  ur3_ur3_arm_ikfast_solver.cpp
ur3_motion/: CMakeLists.txt  package.xml
ur3_motion/src/: basic_kin.cpp  motion_manager.cpp  test_plan.cpp  traj_manager.cpp  ur3_planner_node.cpp  ur3_planner_server.cpp
ur3_msgs/: CMakeLists.txt  package.xml
ur3_msgs/action/: BaseControl.action  MotionPlan.action  PandaTask.action
ur3_msgs/msg/: ControlStep.msg  Header.msg  MotionStep.msg  TaskStep.msg
ur3_robot/: README.md
ur3_robot/ur3_camera_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
ur3_robot/ur_modern_driver/: cricle_demo.py  draw_face.py  fllow_ARCode.py  follow_ArCode.py  follow_right_hand.py  writing_demo.py
ur3_robot/ur_planning/: CMakeLists.txt  README.md  package.xml
(+64 files in other folders)
